update FMA experience

--- a/index.html
+++ b/index.html
@@ -36,16 +36,15 @@
       <h2>my work 👨‍💻</h2>
       <div class="work-card green-card">
         <div class="work-card-header">
-          <div class="work-title">Co-Founder @ Brokol</div>
+          <div class="work-title">Co-Founder @ FeedMyADHD</div>
           <div class="work-date">Nov '22 - Present</div>
         </div>
         <ul class="work-details">
-          <li>On a mission to reduce household food waste 🍊</li>
-          <li>Helping ADHDers with their relationship with food</li>
+          <li>Helping ADHDers reduce their food related overwhelm 🍊</li>
           <li>
-            Previous idea's beta mobile app gained 350+ user sign ups
-            organically (idea didn't work but learnings were worth it)
+            Organically grew community of 8k+ ADHDers that share their struggles
           </li>
+          <li>Beta testing a meal planning website with 2k+ users</li>
           <button
             class="read-more-button green-button"
             onclick="location.href='src/brokol.html'"
