--- a/src/brokol.html
+++ b/src/brokol.html
@@ -8,22 +8,22 @@
   </head>
   <body>
     <div class="brokol-page">
-      <h1>Co-Founder @ Brokol</h1>
+      <h1>Co-Founder @ FeedMyADHD</h1>
       <img src="./brokol.png" alt="Brokol" class="brokol-image" />
       <section class="section">
         <h2>Story So Far</h2>
         <p>
-          Brokol started with a simple idea to reduce household food waste. We
-          didn't bother doing user interviews and jumped straight into building
-          our visionary product (ppl compare us to the likes of Steve Jobs all
-          the time). We developed an inventory tracker to help people track
-          their food, get reminders when their food is about to expire and thus
-          REDUCE FOOD WASTE 🤯. The idea was an overnight success and we gained
-          5k beta installs the first week solely through word of mouth. People
-          were practically throwing their money at us. lol just kidding - that
-          was fun to write tho. The app never gained any meaningful traction and
-          we didn't know WHO we had built the app for... That was our first and
-          mighty mistake - (very) bad customer discovery.
+          Brokol (now FeedMyADHD) started with a simple idea to reduce household
+          food waste. We didn't bother doing user interviews and jumped straight
+          into building our visionary product (ppl compare us to the likes of
+          Steve Jobs all the time). We developed an inventory tracker to help
+          people track their food, get reminders when their food is about to
+          expire and thus REDUCE FOOD WASTE 🤯. The idea was an overnight
+          success and we gained 5k beta installs the first week solely through
+          word of mouth. People were practically throwing their money at us. lol
+          just kidding - that was fun to write tho. The app never gained any
+          meaningful traction and we didn't know WHO we had built the app for...
+          That was our first and mighty mistake - (very) bad customer discovery.
         </p>
         <p>
           Fortunately a demographic we did stumble upon in the process were
