Added Product Manager Intern role at Happipad

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
       </div>
       <div class="work-card red-card">
         <div class="work-card-header">
+          <div class="work-title">Product Manager Intern @ Happipad</div>
+          <div class="work-date">Jan '25 - April '25</div>
+        </div>
+        <ul class="work-details">
+          <li>Exploring new market verticals for Happipad 🏠</li>
+          <li>...</li>
+          <li>...</li>
+        </ul>
+      </div>
+      <div class="work-card blue-card">
+        <div class="work-card-header">
           <div class="work-title">Full Stack Developer Co-op @ CGI</div>
           <div class="work-date">Jan '24 - August '24</div>
         </div>
@@ -64,7 +75,7 @@
           <li>4 months in QA in Agile team of 40</li>
         </ul>
       </div>
-      <div class="work-card blue-card">
+      <div class="work-card green-card">
         <div class="work-card-header">
           <div class="work-title">ParkView @ BC HACKS 5 (1st Place)</div>
           <div class="work-date">Jan '24</div>
@@ -74,26 +85,26 @@
           <li>
             Integrated with a user-facing mobile app, updating graphical map
           </li>
-          <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
+          <li>
+            Developed in under 36 hours with lots of coffee and minimal sleep
+          </li>
           <button
-            class="read-more-button blue-button"
+            class="read-more-button green-button"
             onclick="location.href='src/parkview.html'"
           >
             Read the story ->
           </button>
         </ul>
       </div>
-      <div class="work-card green-card">
+      <div class="work-card red-card">
         <div class="work-card-header">
           <div class="work-title">Software Team @ Marine Design Club</div>
           <div class="work-date">June '23 - Dec '23</div>
         </div>
         <ul class="work-details">
           <li>Founding team & former software lead at Marine Design Club 🤖</li>
-          <li>
-            Building an autonomous underwater vehicle to compete at Robosub
-          </li>
-          <li>Working on ML model to detect objects underwater</li>
+          <li>Built an autonomous underwater vehicle to compete at Robosub</li>
+          <li>Worked on an ML model to detect objects underwater</li>
         </ul>
       </div>
     </div>
