Revise elevator pitch in index.html to emphasize problem-solving and product development experience

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
         <button id="play-button">play elevator music 🎵</button>
         <h2>my elevator pitch...🛗</h2>
         <p>
-          I'm passionate about
-          <strong>
-            solving meaningful problems and making a positive impact
-          </strong>
-          through technology. A self starter that loves bringing ideas to life!
-          I have a <strong> strong technical background </strong> with Full
-          Stack development coop experience. Interested in a career in
-          <strong> product management and entrepreneurship. </strong>
+          I care about <strong>solving meaningful problems</strong> and
+          <strong>turning ideas into real products</strong>. I've led projects
+          from scratch, built and shipped products people use, and worked
+          closely with users along the way. With co-op experience in
+          <strong>full-stack development & product management</strong>, I'm
+          exploring the intersection of
+          <strong>product, engineering, and entrepreneurship</strong>.
         </p>
       </div>
     </div>
