Refine index.html content to highlight community building alongside product development experience

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <p>
           I care about <strong>solving meaningful problems</strong> and
           <strong>turning ideas into real products</strong>. I've led projects
-          from scratch, built and shipped products people use, and worked
-          closely with users along the way. With co-op experience in
+          from scratch, built and shipped products people use, and grown
+          communities around them from day one. With co-op experience in
           <strong>full-stack development & product management</strong>, I'm
           exploring the intersection of
           <strong>product, engineering, and entrepreneurship</strong>.
